# tbank

./: .env.example  .flake8  .gitignore  README.md  config.json  lint.sh  main.py  pyproject.toml  test.sh
src/: config.py  logger.py  reports.py  services.py  utils.py  views.py
tests/: test_reports.py  test_services.py  test_utils.py  test_views.py
